--- a/cotielog.html
+++ b/cotielog.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="apple-mobile-web-app-title" content="STORE | 꼬띠샵" />
-  <meta name="description" content="꼬띠샵의 제품들을 직접 만져보고 입혀볼 수 있는 오프라인 매장입니다. 방문 전 예약 전화 부탁드려요!" />
+  <meta name="apple-mobile-web-app-title" content="COTIELOG | 꼬띠샵" />
+  <meta name="description" content="꼬띠는 오늘 무얼 하고 있을까요? 꼬띠샵의 새로운 소식들을 만나보세요!" />
 
-  <title>STORE | 꼬띠샵</title>
+  <title>COTIELOG | 꼬띠샵</title>
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="꼬띠샵" />
-  <meta property="og:title" content="STORE | 꼬띠샵" />
-  <meta property="og:description" content="꼬띠샵의 제품들을 직접 만져보고 입혀볼 수 있는 오프라인 매장입니다. 방문 전 예약 전화 부탁드려요!" />
+  <meta property="og:title" content="COTIELOG | 꼬띠샵" />
+  <meta property="og:description" content="꼬띠는 오늘 무얼 하고 있을까요? 꼬띠샵의 새로운 소식들을 만나보세요!" />
   <meta property="og:image" content="./img/og_image.jpg" />
   <meta property="og:url" content="https://jeon-hyerin.github.io/cotieshop/" />
 
     <!--Twitter Card-->
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="꼬띠샵" />
-  <meta property="twitter:title" content="STORE | 꼬띠샵" />
-  <meta property="twitter:description" content="꼬띠샵의 제품들을 직접 만져보고 입혀볼 수 있는 오프라인 매장입니다. 방문 전 예약 전화 부탁드려요!" />
+  <meta property="twitter:title" content="COTIELOG | 꼬띠샵" />
+  <meta property="twitter:description" content="꼬띠는 오늘 무얼 하고 있을까요? 꼬띠샵의 새로운 소식들을 만나보세요!" />
   <meta property="twitter:image" content="./img/og_image.jpg" />
   <meta property="twitter:url" content="https://jeon-hyerin.github.io/cotieshop" />
 
@@ -58,7 +58,7 @@
   <script defer src="./js/common.js"></script>
 
 </head>
-<body class="store">
+<body class="cotielog">
   <div id="wrapper">
     <a href="#main" id="skip-nav">본문 바로가기</a>
 
@@ -106,8 +106,8 @@
                 <li><a href="#"><span>고양이</span></a></li>
               </ul>
             </li>
-            <li><a href="./cotielog.html">Cotielog</a></li>
-            <li class="selected"><a href="./store.html">Store</a></li>
+            <li class="selected"><a href="./cotielog.html">Cotielog</a></li>
+            <li><a href="./store.html">Store</a></li>
             <li class="mobile"><a href="#">About Us</a></li>
             <li class="mobile"><a href="#">Buy Shop</a></li>
           </ul>
@@ -169,116 +169,126 @@
 
     <!-- MAIN -->
     <main id="main">
-      <!-- STORE -->
-      <section class="store">
-        <h2 class="hide">오프라인 매장 안내</h2>
+      <!-- COTIELOG -->
+      <section class="cotielog">
+        <h2 class="hide">꼬띠샵 게시판</h2>
         <div class="inner">
-
           <div class="left">
-            <h3 class="store__title">Store</h3>
-            <p class="store__description description">
-              꼬띠샵의 오프라인 매장에서는 제품들을 직접 착용해 볼 수 있어<br class="only-pc" />
-              사이즈 체크가 필요한 반려동물과 함께 방문 가능합니다.
-            </p>
-            <div class="image pc">
-              <img src="./img/store/store_character_base.jpg" alt="" />
-              <img src="./img/store/store_character_hover.jpg" alt="" />
+            <h3>Cotielog</h3>
+            <ul class="cotielog__menu">
+              <li><a href="#">ALL</a></li>
+              <li><a href="#">공지</a></li>
+              <li><a href="#">뉴스</a></li>
+              <li><a href="#">이벤트</a></li>
+              <li><a href="#">스토리</a></li>
+            </ul>
+            <div class="image">
+              <img src="./img/cotielog/cotielog_character_base.jpg" alt="" />
+              <img src="./img/cotielog/cotielog_character_hover.jpg" alt="" />
             </div>
           </div>
-
           <div class="right">
-            <ul class="store__menu">
-              <li>
-                <div class="image">
-                  <img src="./img/store/store_img1.jpg" alt="" />
-                </div>
-                <div class="text-group">
-                  <em class="title">Cotieshop Showroom</em>
-                  <div class="description">
-                    <p class="hours">
-                      Mon-Fri 09:30 -18:00 / Lunch Time 12:30 - 13:30 / Sat, Sun, Holiday is Off
-                    </p>
-                    <p class="address">
-                      서울특별시 용산구 우사단로 2길 1, 3층
-                    </p>
-                    <p class="tel">
-                      (02) 2678-3096~7 (방문 시 미리 전화 예약 주시기 바랍니다)
-                    </p>
-                  </div>
-                </div>
-                <a href="#" class="btn">
-                  <span>Map View</span>
-                </a>
-              </li>
-              <li>
-                <div class="image">
-                  <img src="./img/store/store_img2.jpg" alt="" />
-                </div>
-                <div class="text-group">
-                  <em class="title">갤러리아 압구정점 - 펫 부티크</em>
-                  <div class="description">
-                    <p class="hours">
-                      Mon-Thu 10:30 - 20:00 / Fri-Sun 10:30 - 20:30 / Holiday is Off
-                    </p>
-                    <p class="address">
-                      서울 강남구 압구정로 343 Galleria Luxury Hall West 1F
-                    </p>
-                    <p class="tel">
-                      (02) 3449-4265
-                    </p>
-                  </div>
-                </div>
-                <a href="#" class="btn">
-                  <span>Map View</span>
-                </a>
-              </li>
-              <li>
-                <div class="image">
-                  <img src="./img/store/store_img3.jpg" alt="" />
-                </div>
-                <div class="text-group">
-                  <em class="title">코코스퀘어 의왕점</em>
-                  <div class="description">
-                    <p class="hours">
-                      Mon-Sun 10:30 – 21:00
-                    </p>
-                    <p class="address">
-                      경기 의왕시 바라산로 1 (학의동 1039) , 롯데 프리미엄 아울렛 타임빌라스 글라스빌 2F
-                    </p>
-                    <p class="tel">
-                      031-329-4012
-                    </p>
-                  </div>
-                </div>
-                <a href="#" class="btn">
-                  <span>Map View</span>
-                </a>
-              </li>
-              <li>
-                <div class="image">
-                  <img src="./img/store/store_img4.jpg" alt="" />
-                </div>
-                <div class="text-group">
-                  <em class="title">롯데백화점 강남점 - ZIPSA</em>
-                  <div class="description">
-                    <p class="hours">
-                      Mon-Thu 10:30 - 20:00 / Fri-Sun 10:30 - 20:30 / Holiday is Off
-                    </p>
-                    <p class="address">
-                      서울특별시 강남구 도곡로 401 (대치동 936-21) 롯데백화점 본관 1층
-                    </p>
-                    <p class="tel">
-                      02-531-2397
-                    </p>
-                  </div>
-                </div>
-                <a href="#" class="btn">
-                  <span>Map View</span>
-                </a>
-              </li>
-            </ul>
+            <div class="cotielog__content">
+              <ul class="cotielog__notice">
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/notice_img1.png" alt="" />
+                    </div>
+                    <em class="title">2021.11 케이펫페어 일산 참가</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/notice_img2.png" alt="" />
+                    </div>
+                    <em class="title">2021 10월 대체공휴일 배송 안내</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/notice_img3.png" alt="" />
+                    </div>
+                    <em class="title">2021 추석 연휴 배송 안내</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/notice_img4.jpg" alt="" />
+                    </div>
+                    <em class="title">꼬띠샵은 친환경 포장재를 사용합니다.</em>
+                  </a>
+                </li>
+              </ul>
+              <ul class="cotielog__news">
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/news_img1.png" alt="" />
+                    </div>
+                    <em class="title">2021 GDWEB 디자인 어워즈 WINNER PRIZE 수상🎉</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/news_img2.jpg" alt="" />
+                    </div>
+                    <em class="title">[보도자료] 꼬띠샵, 홈페이지 리뉴얼 기념 ‘공유 이벤트’진행</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/news_img3.jpg" alt="" />
+                    </div>
+                    <em class="title">오프라인 입점 매장 안내</em>
+                  </a>
+                </li>
+              </ul>
+              <ul class="cotielog__event">
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/event_img1.jpg" alt="" />
+                    </div>
+                    <em class="title">9월 한 달 동안 전 품목 10% 할인</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/event_img2.png" alt="" />
+                    </div>
+                    <em class="title">홈페이지 리뉴얼 이벤트</em>
+                  </a>
+                </li>
+              </ul>
+              <ul class="cotielog__story">
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/story_img1.png" alt="" />
+                    </div>
+                    <em class="title">2021.08 우수 리뷰 고객 캐리커쳐</em>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="image">
+                      <img src="./img/cotielog/story_img2.png" alt="" />
+                    </div>
+                    <em class="title">2021.09 우수 리뷰 고객 캐리커쳐</em>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-
+          
+          
         </div>
       </section>
     </main>
