--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <li><a href="#"><span>고양이</span></a></li>
               </ul>
             </li>
-            <li><a href="#">Cotielog</a></li>
+            <li><a href="./cotielog.html">Cotielog</a></li>
             <li><a href="./store.html">Store</a></li>
             <li class="mobile"><a href="#">About Us</a></li>
             <li class="mobile"><a href="#">Buy Shop</a></li>
