--- a/outdoor.html
+++ b/outdoor.html
@@ -440,6 +440,20 @@
             <ul class="harness"></ul>
             <ul class="bag"></ul>
           </div>
+
+          <div class="pagination">
+            <a href="#" class="on">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#" class="next">
+              <i class="fas fa-chevron-right"><span>다음</span></i>
+            </a>
+            <a href="#" class="end">
+              <i class="fas fa-angle-double-right"><span>끝</span></i>
+            </a>
+          </div>
         </div>
       </section>
     </main>
