--- a/brands.html
+++ b/brands.html
@@ -89,7 +89,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">Outdoor</a>
+              <a href="./outdoor.html">Outdoor</a>
               <ul class="sub-menu">
                 <li><a href="#"><span>목줄</span></a></li>
                 <li><a href="#"><span>리드줄</span></a></li>
