--- a/outdoor.html
+++ b/outdoor.html
@@ -184,7 +184,7 @@
           </ul>
 
           <div class="outdoor__content">
-            <ul class="fashion product visible" data-type="fashion">
+            <ul class="fashion product product__menu visible" data-type="fashion">
               <li>
                 <a href="#">
                   <div class="image">
@@ -435,7 +435,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="collar product" data-type="collar">
+            <ul class="collar product product__menu" data-type="collar">
               <li>
                 <a href="#">
                   <div class="image">
@@ -704,7 +704,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="leash product" data-type="leash">
+            <ul class="leash product product__menu" data-type="leash">
               <li>
                 <a href="#">
                   <div class="image">
@@ -972,7 +972,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="harness product" data-type="harness">
+            <ul class="harness product product__menu" data-type="harness">
               <li>
                 <a href="#">
                   <div class="image">
@@ -1061,7 +1061,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="bag product" data-type="bag">
+            <ul class="bag product product__menu" data-type="bag">
               <li>
                 <a href="#">
                   <div class="image">
@@ -1121,8 +1121,8 @@
             <a href="#" class="on">1</a>
             <a href="#">2</a>
             <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
+            <a href="#" class="pc">4</a>
+            <a href="#" class="pc">5</a>
             <a href="#" class="next">
               <i class="fas fa-chevron-right"><span>다음</span></i>
             </a>
