--- a/store.html
+++ b/store.html
@@ -58,7 +58,7 @@
   <script defer src="./js/common.js"></script>
 
 </head>
-<body class="store">
+<body class="store sub">
   <div id="wrapper">
     <a href="#main" id="skip-nav">본문 바로가기</a>
 
@@ -89,7 +89,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">Outdoor</a>
+              <a href="./outdoor.html">Outdoor</a>
               <ul class="sub-menu">
                 <li><a href="#"><span>목줄</span></a></li>
                 <li><a href="#"><span>리드줄</span></a></li>
