--- a/outdoor.html
+++ b/outdoor.html
@@ -184,7 +184,7 @@
           </ul>
 
           <div class="outdoor__content">
-            <ul class="fashion product product__menu visible" data-type="fashion">
+            <ul class="product product__menu visible" data-type="fashion">
               <li>
                 <a href="#">
                   <div class="image">
@@ -435,7 +435,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="collar product product__menu" data-type="collar">
+            <ul class="product product__menu" data-type="collar">
               <li>
                 <a href="#">
                   <div class="image">
@@ -704,7 +704,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="leash product product__menu" data-type="leash">
+            <ul class="product product__menu" data-type="leash">
               <li>
                 <a href="#">
                   <div class="image">
@@ -972,7 +972,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="harness product product__menu" data-type="harness">
+            <ul class="product product__menu" data-type="harness">
               <li>
                 <a href="#">
                   <div class="image">
@@ -1061,7 +1061,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="bag product product__menu" data-type="bag">
+            <ul class="product product__menu" data-type="bag">
               <li>
                 <a href="#">
                   <div class="image">
