--- a/store.html
+++ b/store.html
@@ -99,7 +99,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">Indoor</a>
+              <a href="./indoor.html">Indoor</a>
               <ul class="sub-menu">
                 <li><a href="#"><span>리빙</span></a></li>
                 <li><a href="#"><span>장난감</span></a></li>
