--- a/indoor/living.html
+++ b/indoor/living.html
@@ -182,7 +182,7 @@
           </ul>
 
           <div class="indoor__content">
-            <ul class="product product__menu visible" data-type="toy">
+            <ul class="product product__menu" data-type="toy">
               <li>
                 <a href="#">
                   <div class="image">
@@ -242,7 +242,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu" data-type="living">
+            <ul class="product product__menu visible" data-type="living">
               <li>
                 <a href="#">
                   <div class="image">
