--- a/outdoor/bag.html
+++ b/outdoor/bag.html
@@ -184,7 +184,7 @@
           </ul>
 
           <div class="outdoor__content">
-            <ul class="product product__menu visible" data-type="fashion">
+            <ul class="product product__menu" data-type="fashion">
               <li>
                 <a href="#">
                   <div class="image">
@@ -1061,7 +1061,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu" data-type="bag">
+            <ul class="product product__menu visible" data-type="bag">
               <li>
                 <a href="#">
                   <div class="image">
