--- a/outdoor/collar.html
+++ b/outdoor/collar.html
@@ -184,7 +184,7 @@
           </ul>
 
           <div class="outdoor__content">
-            <ul class="product product__menu visible" data-type="fashion">
+            <ul class="product product__menu" data-type="fashion">
               <li>
                 <a href="#">
                   <div class="image">
@@ -435,7 +435,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu" data-type="collar">
+            <ul class="product product__menu visible" data-type="collar">
               <li>
                 <a href="#">
                   <div class="image">
