--- a/outdoor/harness.html
+++ b/outdoor/harness.html
@@ -184,7 +184,7 @@
           </ul>
 
           <div class="outdoor__content">
-            <ul class="product product__menu visible" data-type="fashion">
+            <ul class="product product__menu" data-type="fashion">
               <li>
                 <a href="#">
                   <div class="image">
@@ -972,7 +972,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu" data-type="harness">
+            <ul class="product product__menu visible" data-type="harness">
               <li>
                 <a href="#">
                   <div class="image">
