--- a/indoor/cat.html
+++ b/indoor/cat.html
@@ -182,7 +182,7 @@
           </ul>
 
           <div class="indoor__content">
-            <ul class="product product__menu visible" data-type="toy">
+            <ul class="product product__menu" data-type="toy">
               <li>
                 <a href="#">
                   <div class="image">
@@ -313,7 +313,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu" data-type="cat">
+            <ul class="product product__menu visible" data-type="cat">
               <li>
                 <a href="#">
                   <div class="image">
