--- a/outdoor/leash.html
+++ b/outdoor/leash.html
@@ -184,7 +184,7 @@
           </ul>
 
           <div class="outdoor__content">
-            <ul class="product product__menu visible" data-type="fashion">
+            <ul class="product product__menu" data-type="fashion">
               <li>
                 <a href="#">
                   <div class="image">
@@ -704,7 +704,7 @@
                 </a>
               </li>
             </ul>
-            <ul class="product product__menu" data-type="leash">
+            <ul class="product product__menu visible" data-type="leash">
               <li>
                 <a href="#">
                   <div class="image">
