--- a/cotielog.html
+++ b/cotielog.html
@@ -321,12 +321,14 @@
               <i class="fas fa-chevron-down"></i>
             </a>
             <div>
-              <span>
-                주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
-              </span>
-              <address>
-                04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
-              </address>
+              <div class="wrap">
+                <span>
+                  주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
+                </span>
+                <address>
+                  04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
+                </address>
+              </div>
             </div>
           </div>
         </div>
