--- a/outdoor.html
+++ b/outdoor.html
@@ -176,11 +176,11 @@
 
           <h3>Outdoor</h3>
           <ul class="outdoor__menu category">
-            <li class="active" data-menu="fashion"><a href="./outdoor.html">패션</a></li>
-            <li data-menu="collar"><a href="./outdoor/collar.html">목줄</a></li>
-            <li data-menu="leash"><a href="./outdoor/leash.html">리드줄</a></li>
-            <li data-menu="harness"><a href="./outdoor/harness.html">하네스</a></li>
-            <li data-menu="bag"><a href="./outdoor/bag.html">이동가방</a></li>
+            <li class="active" data-menu="fashion"><a href="#">패션</a></li>
+            <li data-menu="collar"><a href="#">목줄</a></li>
+            <li data-menu="leash"><a href="#">리드줄</a></li>
+            <li data-menu="harness"><a href="#">하네스</a></li>
+            <li data-menu="bag"><a href="#">이동가방</a></li>
           </ul>
 
           <div class="outdoor__content">
@@ -1122,7 +1122,6 @@
             <a href="#">2</a>
             <a href="#">3</a>
             <a href="#" class="pc">4</a>
-            <a href="#" class="pc">5</a>
             <a href="#" class="next">
               <i class="fas fa-chevron-right"><span>다음</span></i>
             </a>
@@ -1130,6 +1129,7 @@
               <i class="fas fa-angle-double-right"><span>끝</span></i>
             </a>
           </div>
+          
         </div>
       </section>
     </main>
@@ -1167,12 +1167,14 @@
               <i class="fas fa-chevron-down"></i>
             </a>
             <div>
-              <span>
-                주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
-              </span>
-              <address>
-                04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
-              </address>
+              <div class="wrap">
+                <span>
+                  주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
+                </span>
+                <address>
+                  04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
+                </address>
+              </div>
             </div>
           </div>
         </div>
