--- a/indoor/living.html
+++ b/indoor/living.html
@@ -176,9 +176,9 @@
 
           <h3>Indoor</h3>
           <ul class="indoor__menu category">
-            <li data-menu="toy"><a href="../indoor.html">장난감</a></li>
-            <li class="active" data-menu="living"><a href="./living.html">리빙</a></li>
-            <li data-menu="cat"><a href="./cat.html">고양이</a></li>
+            <li data-menu="toy"><a href="#">장난감</a></li>
+            <li class="active" data-menu="living"><a href="#">리빙</a></li>
+            <li data-menu="cat"><a href="#">고양이</a></li>
           </ul>
 
           <div class="indoor__content">
@@ -580,12 +580,14 @@
               <i class="fas fa-chevron-down"></i>
             </a>
             <div>
-              <span>
-                주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
-              </span>
-              <address>
-                04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
-              </address>
+              <div class="wrap">
+                <span>
+                  주식회사 델핀 서울특별시 용산구 우사단로2길 1, 3층 대표 : 신승호 사업자 등록번호 : 113-86-83830
+                </span>
+                <address>
+                  04413 서울특별시 용산구 우사단로2길 1 (보광동) TEL : 02-2678-3096~7 FAX : 02-2678-3099
+                </address>
+              </div>
             </div>
           </div>
         </div>
