--- a/indoor/living.html
+++ b/indoor/living.html
@@ -617,7 +617,7 @@
 
     var menuLists = document.querySelectorAll('.indoor__menu li');
     menuLists.forEach(function (menuList) {
-      menuList.addEventListener('click', function () {
+      menuList.addEventListener('click', function (event) {
         var dataMenu = event.target.parentElement.dataset.menu;
         var ulEls = document.querySelectorAll('.indoor__content ul');
         ulEls.forEach(function (ulEl) {
